--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
 
     <!-- SCRIPTS THAT WE HAVE PROVIDED FOR YOU -->
-    <script src="scripts/canvas.js"></script>
+    <script src="/src/scripts/canvas.js"></script>
     <script src="scripts/pt.min.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/modal.js"></script>
