--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
   <body>
 
     <!-- Start writing your HTML code here -->
+
+    <!-- HOME -->
+
     <section class="full-section">
       <div id="pt" class="canvas"></div>
 
@@ -47,13 +50,70 @@
       <div id="foreground" class="row col s12">
 
         <h1>
-          Hello I'm <span class="primary-text-color">YOUR_NAME</span>
+          Hello I'm <span class="primary-text-color bold">YOUR_NAME</span>
           <br/>
           I'm a full-stack web developer.
         </h1>
-        <button class="big-button">View my work</button>
+        <button class="big-button">
+          View my work
+          <I class="mdi mdi-arrow-right"></I>
+        </button>
 
       </div>
+    </section>
+
+    <!-- ABOUT -->
+
+    <section id="about" class="full-section">
+      <div class="row col s12 pt80">
+        <h2>
+          About
+          <br>
+          <hr>
+        </h2>
+      </div>
+
+      <div class="row col s12">
+
+        <div class="hexagon-container col s6 m3">
+          <div class="hexagon">
+            <i class="mdi mdi-speedometer"></i>
+          </div>
+
+              <h5>On-time</h5>
+              <p>Making sure we set and reach deadlines is my specialty.</p>
+          
+        </div>
+
+        <div class="hexagon-container col s6 m3">
+          <div class="hexagon">
+            <i class="mdi mdi-cellphone-link"></i>
+          </div>
+
+              <h5>Responsive</h5>
+              <p>My layouts will work on any device, big or small.</p>
+          </div>
+
+        <div class="hexagon-container col s6 m3">
+          <div class="hexagon">
+            <i class="mdi mdi-lightbulb-outline"></i>
+          </div>
+
+              <h5>Innovative</h5>
+              <p>I always bring new ideas of improvement to the table.</p>
+
+        </div>
+        <div class="hexagon-container col s6 m3">
+          <div class="hexagon">
+            <i class="mdi mdi-rocket"></i>
+          </div>
+
+              <h5>Results</h5>
+              <p>I always try to do the most valuable things I can do for the team.</p>
+
+        </div> 
+      </div>
+    
     </section>
 
 
