--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YOUR_NAME PORTFOLIO</title>
+    <title>WILLIAM GRANATH PORTFOLIO</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
@@ -50,7 +50,7 @@
       <div id="foreground" class="row col s12">
 
         <h1>
-          Hello I'm <span class="primary-text-color bold">YOUR_NAME</span>
+          Hello I'm <span class="primary-text-color bold">William</span>
           <br/>
           I'm a full-stack web developer.
         </h1>
