--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
 
     <!-- SCRIPTS THAT WE HAVE PROVIDED FOR YOU -->
-    <script src="/src/scripts/canvas.js"></script>
+    <script src="scripts/canvas.js"></script>
     <script src="scripts/pt.min.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/modal.js"></script>
@@ -118,7 +118,7 @@
     <div class="pr20 pl140 pb100 row">
 
       <div id="about-me" class="col m6 s12">
-        <img src="/My-techoveracademy-portfolio/src/img/William.jpg" alt="">
+       <img class="portfolio-pic" src="/My-techoveracademy-portfolio/src/img/Techover profilepic.jpg" alt="">
         <h4>Who am I?</h4>
         <p>
           I'm a Front-End Developer who has attended <a href="https://www.academy.techover.nu/home49768186" target="_blank" class="primary-text-color">Techover Academy</a> in Stockholm, Sweden
