Fixed scroll button

--- a/src/index.html
+++ b/src/index.html
@@ -54,10 +54,13 @@
           <br/>
           I'm a full-stack web developer.
         </h1>
-        <button class="big-button">
-          View my work
-          <I class="mdi mdi-arrow-right"></I>
-        </button>
+
+        <a href="#about">
+          <button class="big-button">
+            View my work
+            <I class="mdi mdi-arrow-right"></I>
+          </button>
+        </a>
 
       </div>
     </section>
