--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 
         <a href="#about">
           <button class="big-button">
-            View my work
+            About Me<!--View my work-->
             <I class="mdi mdi-arrow-right"></I>
           </button>
         </a>
