--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         </h2>
       </div>
 
-      <div class="row col s12">
+      <div class="container row col s12">
 
         <div class="hexagon-container col s6 m3">
           <div class="hexagon">
@@ -118,7 +118,7 @@
       </div>
     
       <!-- Bars -->
-    <div class="pr20 pl140 pb100 row">
+    <div class="container pr20 pl140 pb100 row">
 
       <div id="about-me" class="col m6 s12">
        <img class="portfolio-pic" src="/My-techoveracademy-portfolio/src/img/Techover profilepic.jpg" alt="">
