--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YOUR_NAME PORTFOLIO</title>
+    <title>WILLIAMS PORTFOLIO</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
@@ -50,14 +50,16 @@
       <div id="foreground" class="row col s12">
 
         <h1>
-          Hello I'm <span class="primary-text-color bold">YOUR_NAME</span>
+          Hello I'm <span class="primary-text-color bold">WILLIAM</span>
           <br/>
           I'm a full-stack web developer.
         </h1>
-        <button class="big-button">
-          View my work
-          <I class="mdi mdi-arrow-right"></I>
-        </button>
+
+        <a href="#about">
+          <button class="big-button">
+            About Me<!--View my work-->
+            <I class="mdi mdi-arrow-right"></I>
+          </button>
 
       </div>
     </section>
@@ -73,7 +75,7 @@
         </h2>
       </div>
 
-      <div class="row col s12">
+      <div class="container row col s12">
 
         <div class="hexagon-container col s6 m3">
           <div class="hexagon">
@@ -115,10 +117,10 @@
       </div>
     
       <!-- Bars -->
-    <div class="pr20 pl140 pb100 row">
+    <div class="container pr20 pl140 pb100 row">
 
       <div id="about-me" class="col m6 s12">
-        <img src="/src/img/me.png" alt="">
+        <img class="portfolio-pic" src="/src/img/Techover profilepic.jpg" alt="">
         <h4>Who am I?</h4>
         <p>
           I'm a Front-End Developer who has attended <a href="https://www.academy.techover.nu/home49768186" target="_blank" class="primary-text-color">Techover Academy</a> in Stockholm, Sweden
