--- a/src/index.html
+++ b/src/index.html
@@ -245,6 +245,7 @@
 
     <!-- Preloads images so that there is no lag when browsing the site: -->
     <div id="preload">
+      <img src="img/Techover profilepic.jpg"/>
       <img src="img/me.png" />
       <img src="img/filler.jpg" />
       <img src="img/thumb-1.png" />
