maake it better

--- a/src/index.html
+++ b/src/index.html
@@ -247,7 +247,7 @@
     <div id="preload">
       <img src="img/Techover profilepic.jpg"/>
       <img src="img/me.png" />
-      <img src="img/filler.jpg" />
+      <img src="/src/img/filler.png" />
       <img src="img/thumb-1.png" />
       <img src="img/thumb-2.png" />
       <img src="img/thumb-3.png" />
@@ -274,3 +274,4 @@
 
 <!-- SCRIPT THAT WE HAVE PROVIDED FOR YOU -->
 <script src="scripts/canvas.js"></script>
+
