--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
 
     <!-- SCRIPTS THAT WE HAVE PROVIDED FOR YOU -->
-    <script src="/src/scripts/canvas.js"></script>
     <script src="scripts/pt.min.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/modal.js"></script>
@@ -235,7 +234,7 @@
 
       <div id="links" class="col m12 s12">
         <a href="mailto:williamgranath@gmail.com" class="primary-text-color">Email Me</a>
-        <a href="/src/cv/YOUR_NAME.pdf" target="_blank" class="primary-text-color">Download CV</a>
+        <a href="cv/YOUR_NAME.pdf" target="_blank" class="primary-text-color">Download CV</a>
       </div>
 
     </div>
@@ -247,7 +246,7 @@
     <div id="preload">
       <img src="img/Techover profilepic.jpg"/>
       <img src="img/me.png" />
-      <img src="/src/img/filler.png" />
+      <img src="img/filler.png" />
       <img src="img/thumb-1.png" />
       <img src="img/thumb-2.png" />
       <img src="img/thumb-3.png" />
