--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
     <link href="style/padding-margin-helpers.css" media="all" rel="stylesheet" />
 
     <!-- CSS WE HAVE PROVIDED FOR YOU -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css" />
     <link rel='shortcut icon' href='favicon.png' type='image/x-icon'/ >
 
@@ -33,7 +36,8 @@
     <script src="scripts/index.js"></script>
     <script src="scripts/modal.js"></script>
     <script src="scripts/materialize.min.js"></script>
-    
+
+
   </head>
 
   <body>
@@ -48,11 +52,14 @@
       <!-- INNEHÅLL NEDAN:  -->
       <div id="foreground" class="row col s12">
 
-        <h1>
-          Hello I'm <span class="primary-text-color bold">WILLIAM</span>
-          <br/>
-          I'm a full-stack web developer.
-        </h1>
+        <div class="text">
+          <h2>Hello, I'm 
+            <br>
+            <span id="text-animation" data-text="William" class="primary-text-color bold">William</span>
+          <br>
+              I'm a full-stack web-developer
+          </h2>
+        </div>
 
         <a href="#about">
           <button class="big-button">
@@ -66,7 +73,7 @@
     <!-- ABOUT -->
 
     <section id="about" class="full-section">
-      <div class="row col s12 pt80">
+      <div class="row col s12 pt30">
         <h2>
           About
           <br>
