--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
     <div class="container pr20 pl140 pb100 row">
 
       <div id="about-me" class="col m6 s12">
-       <img class="portfolio-pic" src="/My-techoveracademy-portfolio/src/img/Techover profilepic.jpg" alt="">
+       <img class="portfolio-pic" src="img/Techover profilepic.jpg" alt="">
         <h4>Who am I?</h4>
         <p>
           I'm a Front-End Developer who has attended <a href="https://www.academy.techover.nu/home49768186" target="_blank" class="primary-text-color">Techover Academy</a> in Stockholm, Sweden
